compiler/tests/en/errors/compound_assign_struct_no_overload.salam
// EXPECT: E021
struct Point:
    pub x: int = 0
    pub y: int = 0
end

func main:
    mut a := Point { x = 1, y = 2 }
    b := Point { x = 3, y = 4 }
    a += b
end
